# pydata-text-classification

./: .env.example  .gitignore  Makefile  README.md  data_pull.py  main.py  pyproject.toml  results_eda.py  run_all_training.py  settings.py  train_model2vec.py  train_setfit.py  train_tfidf.py  utils.py
data/: eval.parquet  test.parquet  train.parquet
models/model2vec/: metrics_20250719_145825.json  metrics_20250722_064739.json
models/setfit/: metrics_20250719_154815.json  metrics_20250722_084542.json
models/tfidf/: metrics_20250719_145737.json  metrics_20250722_064640.json
